# WallpaperRS

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/shaders/: default.wgsl  particles.wgsl  textured.wgsl
crates/app/: Cargo.toml  build.rs
crates/app/src/: icon.rs  main.rs  state.rs  tray.rs  wallpaper_window.rs
crates/app/src/ui/: library.rs  mod.rs  preview.rs  settings.rs  theme.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  engine.rs  lib.rs  renderer.rs
crates/platform-win/: Cargo.toml
crates/platform-win/src/: fullscreen.rs  lib.rs  window.rs  worker_window.rs
crates/renderer-scene/: Cargo.toml
crates/renderer-scene/src/: lib.rs
crates/renderer-shader/: Cargo.toml
crates/renderer-shader/src/: lib.rs
crates/renderer-video/: Cargo.toml
crates/renderer-video/src/: lib.rs
crates/renderer-web/: Cargo.toml
crates/renderer-web/src/: lib.rs
