[package]
name    = "wallpaper-renderer-video"
version = "0.1.0"
edition = "2021"

[dependencies]
wallpaper-core = { path = "../core" }
anyhow         = { workspace = true }
log            = { workspace = true }
wgpu           = { workspace = true }
bytemuck       = { workspace = true }
serde          = { workspace = true }
tokio          = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
